feat(pom): update dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -15,30 +15,40 @@
 	<description>Development of a book lending system</description>
 	<properties>
 		<java.version>11</java.version>
+		<spring.boot.jpa.version>2.6.6</spring.boot.jpa.version>
+		<spring.boot.web.version>2.6.6</spring.boot.web.version>
+		<spring.boot.starter.test.version>2.6.6</spring.boot.starter.test.version>
+		<mysql.connector.java.version>8.0.28</mysql.connector.java.version>
+		<lombok.version>1.18.22</lombok.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>${spring.boot.jpa.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>${spring.boot.web.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.connector.java.version}</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<version>${spring.boot.starter.test.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
