--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<spring.boot.jpa.version>2.6.6</spring.boot.jpa.version>
 		<spring.boot.web.version>2.6.6</spring.boot.web.version>
 		<spring.boot.starter.test.version>2.6.6</spring.boot.starter.test.version>
+		<spring.boot.starter.validation.version>2.6.6</spring.boot.starter.validation.version>
 		<mysql.connector.java.version>8.0.28</mysql.connector.java.version>
 		<lombok.version>1.18.22</lombok.version>
 	</properties>
@@ -32,7 +33,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>${spring.boot.web.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>${spring.boot.starter.validation.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
