--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,13 @@
 	<description>Development of a book lending system</description>
 	<properties>
 		<java.version>11</java.version>
-		<spring.boot.jpa.version>2.6.6</spring.boot.jpa.version>
-		<spring.boot.web.version>2.6.6</spring.boot.web.version>
-		<spring.boot.starter.test.version>2.6.6</spring.boot.starter.test.version>
-		<spring.boot.starter.validation.version>2.6.6</spring.boot.starter.validation.version>
+		<spring.boot.jpa.version>2.6.7</spring.boot.jpa.version>
+		<spring.boot.web.version>2.6.7</spring.boot.web.version>
+		<spring.boot.starter.test.version>2.6.7</spring.boot.starter.test.version>
+		<spring.boot.starter.validation.version>2.6.7</spring.boot.starter.validation.version>
 		<mysql.connector.java.version>8.0.28</mysql.connector.java.version>
-		<lombok.version>1.18.22</lombok.version>
+		<lombok.version>1.18.24</lombok.version>
+		<swagger-version>3.0.0</swagger-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -49,6 +50,16 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>${swagger-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${swagger-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
